# HeySure-Device

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  build-windows-tauri.bat  build-windows.bat  read.md  run-windows-tauri.bat  run-windows.bat
android/: README.md  build-apk.bat
android/app/: build.gradle.kts  proguard-rules.pro
browser_MCP/: README.md  build.bat  build.js  manifest.json  offscreen.html  popup.html
browser_MCP/src/: background.ts  globals.d.ts  shadow-patch.ts
browser_MCP_win/: README.md  build.bat  build.js  manifest.json  package-lock.json  package.json
browser_automation/: README.md  background.js  manifest.json  popup.css  popup.html
browser_automation/background/: 00_core.js  01_state.js  02_sidebar_page.js  03_formatting.js  04_cache.js  05_temp_email_flow.js  06_automation_run.js  06_registration_run.js  07_events.js  08_agent_auth.js  09_agent_socket.js  10_browser_tools.js
browser_automation/content/: observe.js
browser_automation/popup/: agent-account.js  automation-flow.js  automation-workbench.js  bindings.js  bootstrap.js  cookie-credentials.js  register-workbench.js  registration-flow.js  shared.js
cli_to_api/antigravity_cli_api/: .editorconfig  .gitignore  README.md  run.bat  run.sh  server.py  test_server.py
cli_to_api/grok_cli_api/: README.md  acp_bridge.py  run.sh  server.py  test_server.py
extension/: build.js  manifest.json
extension/src/: background.ts  offscreen.ts
grok_cli/: .gitignore  README.md  acp_bridge.py  run.bat  server.py
linux/: .env.example  .gitignore  README.md  build.sh  install.sh  package.json  requirements.txt  run.sh  selftest_console.py
linux/agent/: __init__.py  config.py  connection.py  dispatch.py  main.py  remote_terminal.py  shellrun.py
linux/src/: main.ts  platform-profile.ts  preload.ts  store.ts
linux/systemd/: heysure-linux-agent.service
mac/: README.md  package.json  run.sh
mac/scripts/: copy-renderer.js  prepare-bundled-python.js
mac/src/: main.ts  platform-profile.ts  store.ts
shared/src/: preload.ts
windows/: README.md  build.bat  index.html  package-lock.json  package.json  run.bat  tsconfig.json  vite.config.ts
windows-tauri/: .gitignore  README.md  package.json
windows-tauri/scripts/: prepare-bundled-python.cjs
windows-tauri/src/: agent.ts  api.ts  main.ts  native.ts  style.css  (+1 more)
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: browser_bridge.rs  guard.rs  main.rs  pty.rs  rc.rs
(+107 files in other folders)
