[package]
name = "heysure-device-tauri"
version = "0.1.0"
description = "HeySure Agent - Windows Desktop (Tauri 2 prototype)"
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "sync", "io-util", "macros", "rt-multi-thread"] }
# 远程控制的键鼠注入（robotjs 的 Rust 等价物）。
enigo = "0.2"
# 远程控制的原生屏幕捕获（Electron desktopCapturer 的等价物，无「屏幕共享」弹窗）。
xcap = "0.4"
# 远程控制：把系统光标绘制进捕获帧（GetCursorInfo/GetIconInfo/DrawIconEx），
# xcap 的 GDI BitBlt 捕获本身不含硬件光标层。
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
# 帧编码：把捕获到的 RgbaImage 压成 JPEG（仅需 jpeg 编码器）。
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# Loopback-only HTTP listener used by browser_MCP_win. It carries small JSON
# input commands from the read-only Chrome extension to this native process.
tiny_http = "0.12"
# 命令行远程（PTY）：跨平台伪终端，Windows 下走 ConPTY。承载「统一远程连接」
# 的 rt:* 交互式终端（src/remote-terminal.ts），见 device/read.md。
portable-pty = "0.8"
# PTY 字节流经 Socket.IO relay 传输，用 base64 装进 rt:data / rt:input 的 data 字段。
base64 = "0.22"
# 开机自启支持（写入注册表实现 Windows 开机启动，默认启用）。
tauri-plugin-autostart = "2"

[profile.release]
# 体积优先：这是本次迁移的核心目标之一。
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
